<resources>
    <string name="app_name">SMART HELMET</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="send_text">Send Text</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="texting_screen">TEXTING SCREEN</string>
    <string name="ble">BLE</string>
    <string name="textview">TextView</string>
    <string name="connect">connect</string>
    <string name="stop_searching">Stop Searching</string>
    <string name="start_searching">START SEARCHING</string>
    <string name="datarecieve">DataRecieve</string>
</resources>
