<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/buttonsendtext"
            android:layout_width="169dp"
            android:layout_height="47dp"
            android:layout_marginStart="121dp"
            android:layout_marginLeft="121dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="121dp"
            android:layout_marginRight="121dp"
            android:layout_marginBottom="316dp"
            android:text="@string/send_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phonenumber" />

        <EditText
            android:id="@+id/textmessage"
            android:layout_width="268dp"
            android:layout_height="67dp"
            android:layout_marginStart="71dp"
            android:layout_marginLeft="71dp"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="72dp"
            android:layout_marginRight="72dp"
            android:layout_marginBottom="22dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/message"
            app:layout_constraintBottom_toTopOf="@+id/phonenumber"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="269dp"
            android:layout_height="66dp"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="71dp"
            android:layout_marginRight="71dp"
            android:layout_marginBottom="32dp"
            android:background="#E7E6E6"
            android:ems="10"
            android:inputType="phone"
            android:shadowColor="#FFFCFC"
            android:hint="@string/phone_number"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/buttonsendtext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textmessage"
            android:autofillHints="" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>