<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blebutton"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/connect"
            android:layout_width="148dp"
            android:layout_height="43dp"
            android:layout_marginStart="131dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="51dp"
            android:text="@string/stop_searching"
            app:layout_constraintBottom_toTopOf="@+id/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonsendtextscreen"
            app:layout_constraintVertical_bias="0.172" />

        <Button
            android:id="@+id/search"
            android:layout_width="148dp"
            android:layout_height="43dp"
            android:layout_marginStart="131dp"
            android:layout_marginEnd="132dp"
            android:layout_marginBottom="272dp"
            android:text="@android:string/search_go"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonsendtextscreen"
            android:layout_width="149dp"
            android:layout_height="43dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="316dp"
            android:text="@string/send_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/blestart"
            android:layout_width="157dp"
            android:layout_height="46dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="121dp"
            android:layout_marginBottom="31dp"
            android:text="@string/ble"
            app:layout_constraintBottom_toTopOf="@+id/buttonsendtextscreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/isconnected"
            android:layout_width="106dp"
            android:layout_height="36dp"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="270dp" />

        <TextView
            android:id="@+id/dataout"
            android:layout_width="169dp"
            android:layout_height="44dp"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="486dp" />

        <TextView
            android:id="@+id/accdata"
            android:layout_width="186dp"
            android:layout_height="73dp"
            android:layout_marginStart="122dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="104dp"
            android:layout_marginBottom="113dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="118dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</FrameLayout>